--- a/excluding-the-third-pattern.tex
+++ b/excluding-the-third-pattern.tex
@@ -4,9 +4,7 @@
 
 In the previous chapter I showed that languages with case competition come in two variants. First, there are languages that allow the internal and external case to surface when they win the competition, such as Gothic and Old High German. Second, there are languages that only allow the internal case to surface when it wins the competition, such as Modern German. Crucially, there is no language that only allows the external case to surface when it wins the competition.
 
-The aim of this chapter is twofold. First, I discuss how the non-existence of the external-only pattern can be explained. Second, I discuss how the difference between internal-and-external languages and internal-only languages can be derived. I introduce both matters a bit more in this introduction.
-
-I start with the non-existence of the external-only pattern. blablabla
+The aim of this chapter is twofold. Third, I discuss how the difference between internal-and-external languages and internal-only languages can be derived. I introduce both matters a bit more in this introduction. Second, I discuss how the non-existence of the external-only pattern can be explained.
 
 Let me now turn to the matter of crosslinguistic differences. Every speaker of a language needs to learn what the pattern for its language is. Headless relatives are infrequent, is what can be said about at least Modern German. Even though not everybody likes the construction to begin with (they prefer (light-)headed relatives), people seem to have the clear intuition that \tsc{int}>\tsc{ext} is much better than the other way around. It seems implausible that learners of German learn this pattern from the few examples they got (there are just too few to make a generalization). Still, the intuition exist. And it is very particular: more complex case wins over less complex case, but only if the internal case is more complex than the external case. This already sounds hard to learn from the input as a generalization. People have also been describing it like this: formulation from Cinque in his book. If it does not come from the input, where does it come from? I claim that it comes from other properties of the language. In Grosu's terminology: is it derived or basic? Ideally, we would want it to be derived.
 
@@ -14,22 +12,22 @@ A similar avenue was pursued by \citealt{himmelreich2017}. She specific language
 
 The crucial difference with I'm doing is that I'm not relying on an arbitrary value I assigned to a language (say null head is active probe, probing only happens upwards). Like I briefly mentioned in Chapter \ref{ch:decomposition}, Nanosyntax models crosslinguistic variation as differences in the lexicon, how the features are packaged together differently. That means that I look for patterns within the languages themselves, and let the facts of the headless relatives follow from those. Specifically, I derive the different behaviors from relative pronouns and the external head that I introduce in this chapter.
 
-In Section \ref{sec:internal-wins} I discuss the situation in which the internal case wins the competition and the relative pronoun surfaces in the internal case. This situation is attested in all languages with case competition: the internal-only ones, such as Modern German, and the internal-and-external ones, such as Gothic and Old High German. I start with showing that relative pronouns are always part of the relative clause. That is why the relative pronoun also takes the internal case, the case assigned in the relative clause. Then, I introduce an element that appears external to the relative clause that carries the external case. This is needed to allow for the comparison between the internal and external case, and to allow for languages like Polish, that do not allow for any case mismatches. The existence of this element is independently motivated by languages that overtly show it. I show that this head contains a subset of the features that the internal head contains. If the case features on the external element are then also a subset of the case features on the internal element, the internal element element can delete the external one. For instance, \tit{wem} deletes \tit{en}.
+In Section \ref{sec:internal-wins} I discuss the situation in which the internal case wins the competition and the relative pronoun surfaces in the internal case. This situation is attested in all languages with case competition: the internal-only ones, such as Modern German, and the internal-and-external ones, such as Gothic and Old High German.
 
 In Section \ref{sec:external-wins} I discuss the situation in which the external case wins the case competition and the relative pronoun surfaces in the external case. This situation is not attested in all of the case competition languages. This situation arises if the external head contains all case features of the internal head. In addition, and this is what distinguishes the internal-and-external languages from the internal-only languages, the features of the relative pronoun are a subset of the features of the external head. So, \tit{em} cannot delete \tit{wen}, but \tit{dem} can delete \tit{den}.
 
 From these two proposals follows that it is impossible to have third pattern, which is indeed also not attested. When the external case wins over the internal one, there is a situation in which the external case could delete the internal one. So, it is impossible to have the second option but not the first one.
 
+\section{Internal case wins}\label{sec:internal-wins}
 
-\section{The internal wins pattern}\label{sec:internal-wins}
+This section discusses the situation in which the internal case wins the case competition and the relative pronoun surfaces in the internal case. These examples are grammatical in languages that allow internal-and-external languages, such as Gothic and Old High German, and also in internal-only languages, such as Modern German.
 
-This section discusses the situation in which the external case wins the case competition and the relative pronoun surfaces in the internal case.
+In \ref{ex:int} I give examples from all three languages in which the internal accusative case wins the case competition over the external nominative, and the relative pronoun appears in the more complex internal accusative case.
 
-Examples of this situation in the three languages under discussion are these:
-
-\exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
+\ex.\label{ex:int}
+\ag. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
  we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}\\
- `Who visits us, Maria likes.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-int}
+ `Who visits us, Maria likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-int}
 \bg. thíz ist \tbf{then} \tbf{sie} \tbf{zéllent}\\
  \ac{dem}.\ac{sg}.\ac{n}.\ac{nom} be.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} 3\ac{pl}.\ac{m}.\ac{nom} tell.\ac{pres}.3\ac{pl}\scsub{[acc]}\\
  `this is the one whom they talk about' \flushfill{Old High German, \ac{otfrid} III 16:50}\label{ex:ohg-int}
@@ -37,21 +35,21 @@ Examples of this situation in the three languages under discussion are these:
  \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} -\ac{comp} love.\ac{pres}.2\ac{sg}.\scsub{[acc]} sick be.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
  `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-int}
 
-I start by looking at Modern German, so the example in \ref{ex:mg-int}. The section is set up like this:
+In this section, I set up the system in Modern German. Once I showed how the pattern is derived for Modern German, I show that the same mechanisms work for Gothic and Old High German.
 
-At the end, I show that this analysis can also be applied to Old High German and Gothic.
+The fact that the relative pronoun appears in the internal case seems to suggest that the relative pronoun is syntactically part of the relative clause. In Section \ref{sec:rel-clause} I give independent evidence from extraposition that the relative pronoun in Modern German indeed is part of the relative clause. Section \ref{sec:two-open-issues} introduces two issues that arise when assuming that there is nothing more than a relative pronoun in the relative clause. The first issue is that there is no carrier for the external case. The second one is that there is no way to distinguish between languages like Modern German and Polish, which does not allow for any case conflicts in its headless relatives. In Section \ref{sec:external-head} I show that both these issues are resolved by introducing an external head. The existence of this element is independently motivated by languages that overtly show it.
+Section \ref{sec:features-head} I show that this element contains a subset of the features that the relative pronoun contains. Section \ref{sec:position-head} places the external head in a syntactic position from which it is c-commanded by the relative pronoun and it can receive case from the main clause predicate. In \ref{sec:proposal-internal-wins}, I present my proposal for the situation in which the internal case wins in Modern German, Gothic and Old High German. If the case features of external head form a subset of the case features of the relative pronoun, the relative pronoun can delete the external head.
 
+\subsection{Relative pronouns in the relative clause}\label{sec:rel-clause}
 
-\subsection{Relative pronouns in the relative clause}
-
-In this section I show that the relative pronoun in Modern German headless relatives is part of the relative clause. The evidence comes from extraposition. In Modern German, it is possible to extrapose a CP (a clause), but not a DP (a noun phrase). In this section I first show that Modern German CPs can be extraposed and DPs cannot. Then I illustrate how relative clauses including the relative pronoun in headless relatives pattern with CPs: they can be extraposed as well. This indicates that the relative pronoun is part of the relative clause.
+In this section I show that the relative pronoun in Modern German headless relatives is part of the relative clause. The evidence comes from extraposition (first given by \citealt{groos1981}). In Modern German, it is possible to extrapose a CP (a clause), but not a DP (a noun phrase). In this section I first show that Modern German CPs can be extraposed and DPs cannot. I illustrate how that the same pattern appears in headed relative clauses: the relative clause can be extraposed, but not including the head of the relative clause. Headless relative pattern with their headless counterparts: relative clauses can be extraposed including their relative pronoun. This indicates that the relative pronoun is part of the relative clause.
 
 The sentences in \ref{ex:mg-extrapose-cp} show that it is possible to extrapose a CP. In \ref{ex:mg-extrapose-cp-base}, the clausal object \tit{wie es dir geht} `how you are doing', marked here in bold, appears in its base position. It can be extraposed to the right edge of the clause, shown in \ref{ex:mg-extrapose-cp-moved}.
 
 \ex.\label{ex:mg-extrapose-cp}
 \ag. Mir ist \tbf{wie} \tbf{es} \tbf{dir} \tbf{geht} egal.\\
  1\tsc{sg}.\tsc{dat} is how it 2\tsc{sg}.\tsc{dat} goes {the same}\\
- `I don't care how you are doing.' \flushfill{Modern German}\label{ex:mg-extrapose-cp-base}
+ `I don't care how you are doing.'\label{ex:mg-extrapose-cp-base}
 \bg. Mir is egal \tbf{wie} \tbf{es} \tbf{dir} \tbf{geht}.\\
  1\tsc{sg}.\tsc{dat} is {the same} how it 2\tsc{sg}.\tsc{dat} goes\\
  `I don't care how you are doing.' \flushfill{Modern German}\label{ex:mg-extrapose-cp-moved}
@@ -62,71 +60,69 @@ In \ref{ex:mg-extrapose-dp-base} the object, marked in bold, appears in its base
 \ex.\label{ex:mg-extrapose-dp}
 \ag. Mir ist \tbf{die} \tbf{Sache} egal.\\
  1\tsc{sg}.\tsc{dat} is that matter {the same}\\
- `I don't care about that matter.' \flushfill{Modern German}\label{ex:mg-extrapose-dp-base}
+ `I don't care about that matter.'\label{ex:mg-extrapose-dp-base}
 \bg. *Mir ist egal \tbf{die} \tbf{Sache}.\\
  1\tsc{sg}.\tsc{dat} is {the same} that matter\\
  `I don't care about that matter.' \flushfill{Modern German}\label{ex:mg-extrapose-dp-moved}
 
-The same asymmetry between CPs and DPs can be observed with relative clauses. A relative clause is a CP, and the head of a relative clause is a DP. The sentences in \ref{ex:extra-headed} contain the relative clause \tit{was er gestohlen hat} `what he has stolen'. This is marked in bold in the examples. The (light) head of the relative clause is \tit{das}.
+The same asymmetry between CPs and DPs can be observed with relative clauses. A relative clause is a CP, and the head of a relative clause is a DP. The sentences in \ref{ex:extra-headed} contain the relative clause \tit{was er gekocht hat} `what he has stolen'. This is marked in bold in the examples. The (light) head of the relative clause is \tit{das}.
 In \ref{ex:extra-headed-base}, the relative clause and its head appear in base position. In \ref{ex:extra-headed-only-clause}, the relative clause is extraposed. This is grammatical, because it is possible to extrapose CPs in Modern German. In \ref{ex:extra-headed-head-clause}, the relative clause and the head are extraposed. This is ungrammatical, because it is possible to extrapose DPs.
 
-\ex. \label{ex:extra-headed} adapted from Groos/v Riemsdijk
-\ag. Jan hat das, \tbf{was} \tbf{er} \tbf{gestohlen} \tbf{hat}, zurückgegeben.\\
-Jan has the money which he stolen has returned\\
-\glt `Jan has returned the money that he has stolen.'\label{ex:extra-headed-base}
-\bg. Jan hat das zurückgegeben, \tbf{was} \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
-the Hans has the money returned which he stolen has\\
-\glt `Jan has returned the money that he has stolen.'\label{ex:extra-headed-only-clause}
-\cg. *Jan hat zurückgegeben, das, \tbf{was} \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
-Jan has returned the money which he stolen has\\
-\glt `Jan has returned the money that he has stolen.'\label{ex:extra-headed-head-clause}
+\ex.\label{ex:extra-headed}
+\ag. Jan hat das, \tbf{was} \tbf{er} \tbf{gekocht} \tbf{hat}, aufgegessen.\\
+ Jan has that what he cooked has eaten\\
+`Jan has eaten what he cooked.'\label{ex:extra-headed-base}
+\bg. Jan hat das aufgegessen, \tbf{was} \tbf{er} \tbf{gekocht} \tbf{hat}.\\
+ Jan has that eaten what he cooked has\\
+`Jan has eaten what he cooked.'\label{ex:extra-headed-only-clause}
+\cg. *Jan hat aufgegessen, das, \tbf{was} \tbf{er} \tbf{gekocht} \tbf{hat}.\\
+ Jan has eaten that what he cooked has\\
+`Jan has eaten what he cooked.'\label{ex:extra-headed-head-clause}
 
 The same can be observed in relative clauses without a head. \ref{ex:extra-headless} is the same sentence as in \ref{ex:extra-headed} only without the overt head. The relative clause is marked in bold again.
 In \ref{ex:extra-headless-base}, the relative clause appears in base position. In \ref{ex:extra-headless-clause}, the relative clause is extraposed. This is grammatical, because it is possible to extrapose CPs in Modern German. In \ref{ex:extra-headless-no-rel}, the relative clause is extraposed without the relative pronouns. This is ungrammatical, because the relative pronoun is part of the CP.
 This shows that the relative pronoun in headless relatives in Modern German are necessarily part of a CP, which is here a relative clause.
 
 \ex.\label{ex:extra-headless}
-\ag. Jan hat \tbf{was} \tbf{er} \tbf{gestohlen} \tbf{hat} zurückgegeben.\\
-Jan has what he stolen has returned\\
-`Hans has returned what he has stolen.' \citet[185]{groos1981}\label{ex:extra-headless-base}
-\bg. Jan hat zurückgegeben \tbf{was} \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
-Jan has returned what he stolen has\\
-`Hans has returned what he has stolen.' \citet[185]{groos1981}\label{ex:extra-headless-clause}
-\bg. *Jan hat \tbf{was} zurückgegeben \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
-Jan has what returned he stolen has\\
-`Hans has returned what he has stolen.' \citet[185]{groos1981}\label{ex:extra-headless-no-rel}
+\ag. Jan hat \tbf{was} \tbf{er} \tbf{gekocht} \tbf{hat} aufgegessen.\\
+Jan has what he cooked has eaten\\
+`Jan has eaten what he cooked.'\label{ex:extra-headless-base}
+\bg. Jan hat aufgegessen \tbf{was} \tbf{er} \tbf{gekocht} \tbf{hat}.\\
+Jan has eaten what he cooked has\\
+`Jan has eaten what he cooked.'\label{ex:extra-headless-clause}
+\bg. *Jan hat \tbf{was} aufgegessen \tbf{er} \tbf{gekocht} \tbf{hat}.\\
+Jan has what eaten he cooked has\\
+`Jan has eaten what he cooked.'\label{ex:extra-headless-no-rel}
 
 In conclusion, extraposition facts show, independently of the case facts, that the relative pronoun in Modern German is syntactically part of the relative clause.
 
 
-\subsection{Two open issues}
+\subsection{Two open issues}\label{sec:two-open-issues}
 
 The previous section showed that the relative pronoun in a Modern German headless relative is syntactically part of the relative clause. The analysis is as follows: the relative pronoun (part of the relative clause) takes the case of the predicate in the relative clause. The sentence is grammatical if the external case is contained in the relative clause case.
 
 \ex.
 \begin{forest} boom
-[
-   [CP, s sep=20mm
-      [\ac{acc}P,
-      tikz={
-      \node[label=below:\tit{wen},
-      draw,circle,
-      scale=0.85,
-      fit to=tree]{};
-      }
-          [\tsc{f2}]
-          [\tsc{nomP}
-              [\tsc{f1}]
-              [XP
-                  [\phantom{xxx}, roof]
-              ]
-          ]
-      ]
-      [VP
-          [\tit{Maria mag}, roof]
-      ]
-   ]
-]
+ [CP, s sep=20mm
+    [\ac{acc}P,
+    tikz={
+    \node[label=below:\tit{wen},
+    draw,circle,
+    scale=0.85,
+    fit to=tree]{};
+    }
+        [\tsc{f2}]
+        [\tsc{nomP}
+            [\tsc{f1}]
+            [XP
+                [\phantom{xxx}, roof]
+            ]
+        ]
+    ]
+    [VP
+        [\tit{Maria mag}, roof]
+    ]
+ ]
 \end{forest}
 
 Now there are two problems, two subjects that need more said about them.
@@ -201,7 +197,7 @@ I propose that headless relatives are derived from a construction that contains 
 
 
 
-\subsection{Solution: an external head}
+\subsection{Solution: an external head}\label{sec:external-head}
 
 I propose a single answer to both issues raised in Section X: relative clauses in headless relatives have an external heads. So even though we say these relatives are headless relatives, at some point in the derivation there actually is a head of the relative clause.
 
@@ -266,11 +262,11 @@ So, Polish has an `out', which German does not have.
 What is this external element? This is the external head, that actually shows up in some languages: double-headed relative clauses.
 
 
-\subsection{Featural content of the head}
+\subsection{Featural content of the head}\label{sec:features-head}
 
 indefinite noun, as cinque and the content of the external head visible in some languages
 
-\subsection{Syntactic position of external head}
+\subsection{Syntactic position of external head}\label{sec:position-head}
 
 Where is this head in the syntactic structure?
 
@@ -371,6 +367,7 @@ But here it does not.
 \end{forest}
 
 
+\section{The proposal}\label{sec:proposal-internal-wins}
 
 \tit{as} is deleted because it cannot surface on its own? why not?
 
@@ -381,11 +378,15 @@ Finnish is like German because its light-headed relatives also add some definite
 
 
 
-\section{The external wins pattern}\label{sec:external-wins}
+\section{External case wins}\label{sec:external-wins}
 
 main clause more complex: full double-headed structure, deletion of element in speccp
 
 Why does this not happen in Modern German? no idea..
+
+\subsection{German}
+
+xx
 
 \subsection{Old High German}
 
