beetje nieuws bij ch5
hupsa hupsa

--- a/excluding-the-third-pattern.tex
+++ b/excluding-the-third-pattern.tex
@@ -37,7 +37,9 @@ In \ref{ex:int} I give examples from all three languages in which the internal a
 
 In this section, I set up the system in Modern German. Once I showed how the pattern is derived for Modern German, I show that the same mechanisms work for Gothic and Old High German.
 
-The fact that the relative pronoun appears in the internal case seems to suggest that the relative pronoun is syntactically part of the relative clause. In Section \ref{sec:rel-clause} I give independent evidence from extraposition that the relative pronoun in Modern German indeed is part of the relative clause. Section \ref{sec:two-open-issues} introduces two issues that arise when assuming that there is nothing more than a relative pronoun in the relative clause. The first issue is that there is no carrier for the external case. The second one is that there is no way to distinguish between languages like Modern German and Polish, which does not allow for any case conflicts in its headless relatives. In Section \ref{sec:external-head} I show that both these issues are resolved by introducing an external head. The existence of this element is independently motivated by languages that overtly show it.
+In the situation described in this section, the relative pronoun appears in the internal case. This seems to suggest that the relative pronoun is syntactically part of the relative clause.
+
+In Section \ref{sec:rel-clause} I give independent evidence from extraposition that the relative pronoun in Modern German indeed is part of the relative clause. Section \ref{sec:two-open-issues} introduces two issues that arise when assuming that there is nothing more than a relative pronoun in the relative clause. The first issue is that there is no carrier for the external case. The second one is that there is no way to distinguish between languages like Modern German and Polish, which does not allow for any case conflicts in its headless relatives. In Section \ref{sec:external-head} I show that both these issues are resolved by introducing an external head. The existence of this element is independently motivated by languages that overtly show it.
 Section \ref{sec:features-head} I show that this element contains a subset of the features that the relative pronoun contains. Section \ref{sec:position-head} places the external head in a syntactic position from which it is c-commanded by the relative pronoun and it can receive case from the main clause predicate. In \ref{sec:proposal-internal-wins}, I present my proposal for the situation in which the internal case wins in Modern German, Gothic and Old High German. If the case features of external head form a subset of the case features of the relative pronoun, the relative pronoun can delete the external head.
 
 \subsection{Relative pronouns in the relative clause}\label{sec:rel-clause}
