--- a/tables/gothic-grammaticality.tex
+++ b/tables/gothic-grammaticality.tex
@@ -8,19 +8,19 @@
         & [\ac{dat}]
         \\ \cmidrule{1-4}
     [\ac{nom}]
-        &
+        & \xcancel{\phantom{xx}}
         & \diagbox[linecolor=white]{*\ac{nom}}{\colorbox{LG}{\ac{acc}}}
         & \diagbox[linecolor=white]{*\ac{nom}}{\colorbox{LG}{\ac{dat}}}
         \\ \cmidrule{1-4}
     [\ac{acc}]
         & \diagbox[linecolor=white]{\colorbox{LG}{\ac{acc}}}{*\ac{nom}}
-        &
+        & \xcancel{\phantom{xx}}
         & \diagbox[linecolor=white]{*\ac{acc}}{\colorbox{LG}{\ac{dat}}}
         \\ \cmidrule{1-4}
     [\ac{dat}]
         & \diagbox[linecolor=white]{\colorbox{LG}{\ac{dat}}}{*\ac{nom}}
         & \diagbox[linecolor=white]{\colorbox{LG}{(\ac{dat})}}{*\ac{acc}}
-        &
+        & \xcancel{\phantom{xx}}
         \\
   \bottomrule
 \end{tabular}
