--- a/tables/gothic-summary.tex
+++ b/tables/gothic-summary.tex
@@ -8,19 +8,19 @@
         & [\ac{dat}]
         \\ \cmidrule{1-4}
     [\ac{nom}]
-        &
+        & \xcancel{\phantom{xx}}
         & \ac{acc}
         & \ac{dat}
         \\ \cmidrule{1-4}
     [\ac{acc}]
         & \ac{acc}
-        &
+        & \xcancel{\phantom{xx}}
         & \ac{dat}
         \\ \cmidrule{1-4}
     [\ac{dat}]
         & \ac{dat}
         & (\ac{dat})
-        &
+        & \xcancel{\phantom{xx}}
         \\
   \bottomrule
 \end{tabular}
