--- a/excluding-the-third-pattern.tex
+++ b/excluding-the-third-pattern.tex
@@ -186,7 +186,7 @@ Consider the Polish and German example below.
 \ex.
 \ag. *Jan lubi \tbf{komu} \tbf{(kolwiek)} \tbf{dokucza}.\\
 Jan like.3\tsc{sg}\scsub{[acc]} \tsc{rel}.\tsc{dat}.\tsc{sg}.\tsc{an} ever tease.3\tsc{sg}\scsub{[dat]}\\
-`Jan likes whoever he teases.'\flushfill{Polish}\label{ex:polish-acc-dat}
+`Jan likes whoever he teases.'\flushfill{Polish}\label{ex:polish-acc-dat-rep}
 \bg. Ich {lade ein} \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
  I.\ac{nom} invite.1\tsc{sg}\scsub{[acc]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria.\ac{nom} trust.3\tsc{sg}\scsub{[dat]}.\\
  `I invite whoever Maria also trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat-disallow}
