--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -571,3 +571,24 @@
   pages={549--553},
   year={1983}
 }
+
+%%%doi check
+
+@article{noussia2015,
+  title={The Politics of Food in the Early Cynics},
+  author={Noussia-Fantuzzi, Maria},
+  journal={Food and History},
+  volume={13},
+  number={1-3},
+  pages={197--211},
+  year={2015},
+  publisher={Brepols Turnhout}
+}
+
+
+@inproceedings{citko2013,
+  title={Size matters: Multidominance and DP structure in Polish},
+  author={Citko, Barbara},
+  booktitle={Talk at the th Poznan Linguistic Meeting},
+  year={2013}
+}
