--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -45,6 +45,42 @@ Examples in which the internal case is nominative, the external case is accusati
  and \ac{rel}.\ac{sg}.\ac{n}.\ac{acc} -\ac{comp} be.\ac{pres}.3\ac{sg}\scsub{[nom]} from Laodicea 2.\ac{pl}.\ac{nom} read.\scsub{[acc]}\\
  `and you read the one which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, adapted from \pgcitealt{harbert1978}{357}}\label{ex:gothic-nom-acc-rep}
 
+The two examples in which nominative and accusative compete are showed in Table \ref{tbl:summary-gothic-nom-acc}. The left column shows the internal case (\ac{int}) between square brackets. The upper row shows the external case (\ac{ext}) between square brackets. The other cells indicate the case of the relative pronoun. The diagonal is crossed out, because these are instances in which the internal and external case match, and there is no case competition taking place. The remaining six cells show instances where the internal and external case differ. Within the cells, two cases are given. The case in the lower left corner stands for the relative pronoun in the internal case. The case in the upper right corner stands for the relative pronoun in the external case. The grammatical examples are marked in (light or dark) gray. The unattested examples are marked with an asterix and are unmarked.\footnote{
+Throughout this dissertation * stands for 'not found in natural language'. For extinct languages this means that there are no attested examples. For non-extinct languages it means that the examples are ungrammatical.
+}
+
+The light gray marking corresponds to \ref{ex:gothic-acc-nom-rep}, in which the external accusative wins the case competition over the internal nominative, and the relative pronoun surfaces in the accusative case. The dark gray marking corresponds to \ref{ex:gothic-nom-acc-rep}, in which the internal accusative wins the case competition over the external nominative, and the relative pronoun surfaces in the accusative case. The instances of *\ac{nom} that appear in the same cells indicate that there are no examples, in which the nominative and the accusative compete and the relative pronoun appears in nominative case.
+
+\begin{table}[H]
+ \center
+ \caption{Extensive summary of Gothic headless relatives}
+ \begin{tabular}{c|c|c|c}
+   \toprule
+     \diagbox[linecolor=white]{\ac{int}}{\ac{ext}}
+         & [\ac{nom}]
+         & [\ac{acc}]
+         & [\ac{dat}]
+         \\ \cmidrule{1-4}
+     [\ac{nom}]
+         & \xcancel{\phantom{xx}}
+         & \diagbox[linecolor=white]{*\ac{nom}}{\colorbox{LG}{\ac{acc}}}
+         &
+         \\ \cmidrule{1-4}
+     [\ac{acc}]
+         & \diagbox[linecolor=white]{\colorbox{DG}{\ac{acc}}}{*\ac{nom}}
+         & \xcancel{\phantom{xx}}
+         &
+         \\ \cmidrule{1-4}
+     [\ac{dat}]
+         &
+         &
+         & \xcancel{\phantom{xx}}
+         \\
+   \bottomrule
+ \end{tabular}
+   \label{tbl:summary-gothic-nom-acc}
+\end{table}
+
 I continue with the competition between dative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in dative case and never in nominative.
 
 Consider the example in \ref{ex:gothic-dat-nom}, in which the internal dative case competes against the external nominative case.
@@ -66,6 +102,38 @@ Examples in which the internal case is nominative, the external case is dative a
 \exg. þaim \tbf{-ei} \tbf{iupa} \tbf{sind} fraþjaiþ \\
  \ac{rel}.\ac{pl}.\ac{n}.\ac{dat} -\ac{comp} above be.\ac{pres}.3\ac{pl}\scsub{[nom]} {think about}.\ac{opt}.\ac{pres}.2\ac{pl}\scsub{[dat]}\\
  `think about those which are above' \flushfill{Gothic, \ac{col} 3:2, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-nom-dat}
+
+The two examples in which nominative and dative compete are showed in Table \ref{tbl:summary-gothic-nom-dat}. The light gray marking corresponds to \ref{ex:gothic-dat-nom}, in which the external dative wins the case competition over the internal nominative, and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:gothic-nom-dat}, in which the internal dative wins the case competition over the external nominative, and the relative pronoun surfaces in the dative case. The instances of *\ac{nom} that appear in the same cells indicate that there are no examples, in which the nominative and the dative compete and the relative pronoun appears in nominative case.
+
+ \begin{table}[H]
+  \center
+  \caption{Extensive summary of Gothic headless relatives}
+  \begin{tabular}{c|c|c|c}
+    \toprule
+      \diagbox[linecolor=white]{\ac{int}}{\ac{ext}}
+          & [\ac{nom}]
+          & [\ac{acc}]
+          & [\ac{dat}]
+          \\ \cmidrule{1-4}
+      [\ac{nom}]
+          & \xcancel{\phantom{xx}}
+          & \diagbox[linecolor=white]{*\ac{nom}}{\ac{acc}}
+          & \diagbox[linecolor=white]{*\ac{nom}}{\colorbox{LG}{\ac{dat}}}
+          \\ \cmidrule{1-4}
+      [\ac{acc}]
+          & \diagbox[linecolor=white]{\ac{acc}}{*\ac{nom}}
+          & \xcancel{\phantom{xx}}
+          &
+          \\ \cmidrule{1-4}
+      [\ac{dat}]
+          & \diagbox[linecolor=white]{\colorbox{DG}{\ac{dat}}}{*\ac{nom}}
+          &
+          & \xcancel{\phantom{xx}}
+          \\
+    \bottomrule
+  \end{tabular}
+    \label{tbl:summary-gothic-nom-dat}
+ \end{table}
 
 I end with the competition between dative and accusative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in dative case and never in accusative.
 
@@ -96,21 +164,41 @@ Examples in which the internal case is accusative, the external case is dative a
 that believe.\ac{opt}.\ac{pres}.2\ac{pl}\scsub{[dat]} \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} {send}.\ac{pret}.3\ac{sg}\scsub{[acc]} \ac{dem}.\ac{sg}.\ac{m}.\ac{nom}\\
 `that you believe in him whom he sent' \flushfill{Gothic, \ac{john} 6:29}\label{ex:gothic-dat-acc}
 
-A summary of the Gothic data as a whole is given in Table \ref{tbl:summary-gothic}. The left column shows the internal case (\ac{int}) between square brackets. The upper row shows the external case (\ac{ext}) between square brackets. The other cells indicate the case of the relative pronoun. The diagonal is left blank, because these are instances in which the internal and external case match, and there is no case competition taking place.
-The remaining six cells show instances where the internal and external case differ. Within the cells, two cases are given. The case in the lower left corner stands for the relative pronoun in the internal case. The case in the upper right corner stands for the relative pronoun in the external case. The grammatical examples are marked in gray. The unattested examples are marked with an asterix and are unmarked.\footnote{
-Throughout this dissertation * stands for 'not found in natural language'. For extinct languages this means that there are no attested examples. For modern languages it means that the examples are ungrammatical.
-}
+The two examples in which accusative and dative compete are showed in Table \ref{tbl:summary-gothic-acc-dat}. The light gray marking corresponds to \ref{ex:gothic-dat-acc}, in which the external dative wins the case competition over the internal accusative, and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:gothic-acc-dat}, in which the internal dative wins the case competition over the external accusative, and the relative pronoun surfaces in the dative case. The instances of *\ac{acc} that appear in the same cells indicate that there are no examples, in which the accusative and the dative compete and the relative pronoun appears in accusative case.
 
-\begin{table}[H]
+ \begin{table}[H]
   \center
   \caption{Extensive summary of Gothic headless relatives}
-    \input{tables/gothic-grammaticality.tex}
-    \label{tbl:summary-gothic}
-\end{table}
+  \begin{tabular}{c|c|c|c}
+    \toprule
+      \diagbox[linecolor=white]{\ac{int}}{\ac{ext}}
+          & [\ac{nom}]
+          & [\ac{acc}]
+          & [\ac{dat}]
+          \\ \cmidrule{1-4}
+      [\ac{nom}]
+          & \xcancel{\phantom{xx}}
+          & \diagbox[linecolor=white]{*\ac{nom}}{{\ac{acc}}}
+          & \diagbox[linecolor=white]{*\ac{nom}}{{\ac{dat}}}
+          \\ \cmidrule{1-4}
+      [\ac{acc}]
+          & \diagbox[linecolor=white]{{\ac{acc}}}{*\ac{nom}}
+          & \xcancel{\phantom{xx}}
+          & \diagbox[linecolor=white]{*\ac{acc}}{\colorbox{LG}{\ac{dat}}}
+          \\ \cmidrule{1-4}
+      [\ac{dat}]
+          & \diagbox[linecolor=white]{{\ac{dat}}}{*\ac{nom}}
+          & \diagbox[linecolor=white]{\colorbox{DG}{(\ac{dat})}}{*\ac{acc}}
+          & \xcancel{\phantom{xx}}
+          \\
+    \bottomrule
+  \end{tabular}
+    \label{tbl:summary-gothic-acc-dat}
+ \end{table}
 
-Table \ref{tbl:summary-gothic} can be simplified a step further as Figure \ref{tbl:summary-gothic-simple}. The data can be divided into two set: a set of three instances in the lower left corner and a set of three instances in the upper right corner.
-In the three instances in the lower left corner, the relative pronoun appears in the internal case. They correspond to the examples \ref{ex:gothic-acc-nom}, \ref{ex:gothic-dat-nom} and \ref{ex:gothic-dat-acc}.
-In the three instances in the upper right corner, the relative pronoun appears in the external case. They correspond to the examples in \ref{ex:gothic-nom-acc}, \ref{ex:gothic-nom-dat} and \ref{ex:gothic-acc-dat}.
+Table \ref{tbl:summary-gothic-acc-dat} can be simplified as Figure \ref{tbl:summary-gothic-simple}. The data can be divided into two set: a set of three instances in the lower left corner and a set of three instances in the upper right corner.
+In the three instances in the lower left corner, the relative pronoun appears in the internal case. They correspond to the examples \ref{ex:gothic-acc-nom-rep}, \ref{ex:gothic-dat-nom} and \ref{ex:gothic-dat-acc}.
+In the three instances in the upper right corner, the relative pronoun appears in the external case. They correspond to the examples in \ref{ex:gothic-nom-acc-rep}, \ref{ex:gothic-nom-dat} and \ref{ex:gothic-acc-dat}.
 
 \begin{table}[H]
   \center
@@ -123,7 +211,7 @@ To sum up, case competition in headless relative is subject to the case scale, r
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale-rep}
 
-If two cases compete, dative wins over accusative and nominative, and accusative wins over nominative. In this section I gave examples from Gothic that illustrate this. As I mentioned in the introduction of this section, this case scale is not specific for Gothic, but it holds across languages (cf. see \citealt{pittner1995} for Modern, Middle High and Old High German, \citealt{grosu2003} for Ancient Greek and \citealt{daskalaki2011} for Modern Greek).\footnote{
+If two cases compete, dative wins over accusative and nominative, and accusative wins over nominative. In this section I gave examples from Gothic that illustrate this. As I mentioned in the introduction of this section, this case scale is not specific for Gothic, but it holds across languages (cf. see \citealt{pittner1995} for Modern, Middle High and Old High German and \citealt{grosu2003,kakarikos2014} for Ancient Greek).\footnote{
 Some of these languages differ from Gothic in that they are subject to an additional constraint. That is, they not allow both the internal or the external case to win case competitions. If the other case is more to the right on the case scale \ref{ex:case-scale-rep}, the result is ungrammatical. Modern German is an example of a language that only allows the internal case to win the case competition. If the external case is more to the right on the case scale, the headless relative is ungrammatical.
 This topic is the main focus of Part \ref{part:variation} of this dissertation.}
 
@@ -613,13 +701,15 @@ The third person singular and first person plural show the same pattern. The acc
             & \ac{1}\ac{sg}
             & \ac{3}\ac{sg}
             & \ac{1}\ac{pl}                           \\
-            \cmidrule{2-4}
+            \cmidrule(lr){2-2}
   \ac{nom}  & ma
             & luw
             & muŋ                                     \\
+            \cmidrule(lr){3-3}
   \ac{acc}  & ma:\tbf{-ne:m}
             & luw\tbf{-e:l}
             & muŋ\tbf{-e:w}                           \\
+            \cmidrule(lr){4-4}
   \ac{dat}  & ma:\tbf{-ne:m}\tcol{DG}{\tbf{-na}}
             & luw\tbf{-e:l}\tcol{DG}{\tbf{-na}}
             & muŋ\tbf{-e:w}\tcol{DG}{\tbf{-na}}       \\
